add page for check status, structure changes

--- a/src/main/resources/templates/user/start.html
+++ b/src/main/resources/templates/user/start.html
@@ -24,7 +24,7 @@
     <img th:src="@{/images/qwer2.png}" width="350" height="350"  alt="red_potion"/>
 </div>
 
-<script th:src="@{/js/user/script.js}"></script>
+<script th:src="@{/js/user/startPage.js}"></script>
 <!--<script>-->
 <!--    document.getElementById("redirectStatusButton").addEventListener("click", function() {-->
 <!--        window.location.href = "https://example.com";-->
