--- a/src/main/resources/templates/user/start.html
+++ b/src/main/resources/templates/user/start.html
@@ -24,6 +24,6 @@
     <img th:src="@{/images/qwer2.png}" width="350" height="350"  alt="red_potion"/>
 </div>
 
-<script th:src="@{/js/user/script.js}"></script>
+<script th:src="@{/js/user/startPage.js}"></script>
 </body>
 </html>
