--- a/src/main/resources/templates/user/start.html
+++ b/src/main/resources/templates/user/start.html
@@ -19,7 +19,7 @@
     <a href="#" class="buttons" id="redirectStatusButton">Проверить статус заказа</a>
     <a href="#" class="buttons" id="redirectOrderButton">Оформить заказ</a>
 
-    <span th:text="${customer.getId()}"></span>
+<!--    <span th:text="${customer.getId()}"></span>-->
 
     <img th:src="@{/images/qwer2.png}" width="350" height="350"  alt="red_potion"/>
 </div>
