--- a/src/main/resources/static/styles/user/tableCartList.css
+++ b/src/main/resources/static/styles/user/tableCartList.css
@@ -42,11 +42,11 @@ td{
 /* demo styles */
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-body{
-    background: -webkit-linear-gradient(left, rgba(219, 239, 38, 0.63), #fa980f);
-    background: linear-gradient(to right, rgba(219, 239, 38, 0.63), #fa980f);
-    font-family: 'Roboto', sans-serif;
-}
+/*body{*/
+/*    background: -webkit-linear-gradient(left, rgba(219, 239, 38, 0), rgba(250, 152, 15, 0));*/
+/*    background: linear-gradient(to right, rgba(219, 239, 38, 0), rgba(250, 152, 15, 0));*/
+/*    font-family: 'Roboto', sans-serif;*/
+/*}*/
 section{
     margin: 50px;
 }
