--- a/src/main/resources/templates/user/checkStatusPage.html
+++ b/src/main/resources/templates/user/checkStatusPage.html
@@ -14,16 +14,17 @@
 
 <div class="text-field text-field_floating-3">
 <!--    todo дописать форму для отправки на контроллер-->
-    <form>
-        <input class="text-field__input" type="name" id="name" name="name">
-        <label class="text-field__label" for="name">Номер заказа</label>
+    <form id="checkStatus" method="POST" action="http://localhost:8080/orders/checkStatus">
+        <input class="text-field__input" type="numberOrder" id="numberOrder" name="numberOrder">
+        <label class="text-field__label" for="numberOrder">Номер заказа</label>
         <h2 th:text="${status}"/>
         <a href="#" class="buttons" id="getStatusButton">Проверить статус заказа</a>
     </form>
 </div>
-<a href="#" class="buttons" id="redirectBackButton">Назад</a>
+<a href="#" class="buttons" id="redirectBackButton">На главную</a>
 
 <script th:src="@{/js/user/checkStatusPage.js}"></script>
+<script th:src="@{/js/user/goto.js}"></script>
 
 </body>
 </html>
