mini changes and start dev manager front

--- a/src/main/resources/templates/user/orderFormPage.html
+++ b/src/main/resources/templates/user/orderFormPage.html
@@ -56,6 +56,7 @@
     <a href="#" class="buttons" id="potionsList">Список доступных зелий</a>
     <div class="item-list">
         <ul id="dropdownList" style="display: none">
+<!--            todo когда на бэке будут методы то нужно вернуть-->
 <!--            <li th:each="item : ${cart.getItems()}">-->
 <!--                <span th:text="${item.potion.name}"></span>-->
 <!--                <button th:action="${cart.addItem(item)}">Добавить</button>-->
