--- a/src/main/resources/templates/user/checkStatusPage.html
+++ b/src/main/resources/templates/user/checkStatusPage.html
@@ -13,11 +13,12 @@
 <p>Введите номер вашего заказа:</p>
 
 <div class="text-field text-field_floating-3">
-    <form id="checkStatus" method="POST" action="http://localhost:8080/orders/checkStatus">
-        <input class="text-field__input" type="numberOrder" id="numberOrder" name="numberOrder">
+    <form id="checkStatus" action="#" th:method="post" th:action="@{/orders/checkStatus}" th:object="${orderNumberForm}">
+        <input class="text-field__input" type="number" id="numberOrder" name="numberOrder" th:field="*{orderId}">
         <label class="text-field__label" for="numberOrder">Номер заказа</label>
         <h2 th:text="${status}"/>
-        <a href="#" class="buttons" id="getStatusButton">Проверить статус заказа</a>
+        <button type="submit" id="getStatusButton">Проверить статус заказа</button>
+<!--        <a href="#" class="buttons" id="getStatusButton">Проверить статус заказа</a>-->
     </form>
 </div>
 <a href="#" class="buttons" id="redirectBackButton">На главную</a>
