--- a/src/main/resources/templates/manager/start.html
+++ b/src/main/resources/templates/manager/start.html
@@ -16,17 +16,15 @@
 
 <div class="text-field text-field_floating-3">
 <!--    todo нужен бэк-->
-    <form id="checkStatus" method="POST" action="http://localhost:8080/ep/manag">
-        <input class="text-field__input" type="epNumber" id="epNumber" name="epNumber">
+    <form id="checkStatus" th:method="post" th:action="@{/manager/setEP}" th:object="${idEPform}">
+        <input class="text-field__input" type="number" id="epNumber"  th:field="*{idEP}">
         <label class="text-field__label" for="epNumber">Номер пункта</label>
-        <a href="#" class="buttons" id="setEPNumber">Вход</a>
+        <button type="submit" class="buttons" id="setEPNumber">Вход</button>
     </form>
 </div>
 
-<a href="#" class="buttons" id="redirectBackButton">На главную</a>
 
 <script th:src="@{/js/manager/start.js}"></script>
-<script th:src="@{/js/user/goto.js}"></script>
 <!--todo вынести goto в общую папку-->
 
 </body>
