--- a/src/main/resources/templates/user/orderFormPage.html
+++ b/src/main/resources/templates/user/orderFormPage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:href="@{/styles/user/general.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/general/general.css}" rel="stylesheet"/>
     <link th:href="@{/styles/user/tableCartList.css}" rel="stylesheet"/>
-    <link th:href="@{/styles/user/inputSpace.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/general/inputSpace.css}" rel="stylesheet"/>
     <link th:href="@{/styles/user/formPage.css}" rel="stylesheet"/>
 </head>
 <body>
@@ -74,7 +74,7 @@
 <script th:src="@{/js/user/cartList.js}"></script>
 <script th:src="@{/js/user/orderForm.js}"></script>
 <script th:src="@{/js/user/orderFormPage.js}"></script>
-<script th:src="@{/js/user/goto.js}"></script>
+<script th:src="@{/js/general/goto.js}"></script>
 <script th:src="@{/js/user/dropList.js}"></script>
 </body>
 </html>
