--- a/src/main/resources/templates/manager/start.html
+++ b/src/main/resources/templates/manager/start.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:href="@{/styles/user/general.css}" rel="stylesheet"/>
-    <link th:href="@{/styles/user/start.css}" rel="stylesheet"/>
-    <link th:href="@{/styles/user/statusPage.css}" rel="stylesheet"/>
-    <link th:href="@{/styles/user/inputSpace.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/general/general.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/general/inputSpace.css}" rel="stylesheet"/>
 </head>
 <body>
 <div class="welcome-block">
