--- a/src/main/resources/templates/user/orderCreateComplete.html
+++ b/src/main/resources/templates/user/orderCreateComplete.html
@@ -10,7 +10,7 @@
 
 <div class="text-block">
     <h1>Заказ создан!</h1>
-<!--    todo добавить возврат номера-->
+    <h1 th:text="${orderId}"></h1>
     <p>По этому номеру вы можете проверять свой заказ:...</p>
 </div>
 
