--- a/src/main/resources/templates/manager/factoryPotion.html
+++ b/src/main/resources/templates/manager/factoryPotion.html
@@ -2,9 +2,11 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>factoryPotion</title>
+    <link th:href="@{/styles/general/general.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/general/inputSpace.css}" rel="stylesheet"/>
 </head>
 <body>
-
+<h1>factoryPotion</h1>
 </body>
 </html>
