fix manager warehouse

--- a/src/main/resources/templates/manager/main.html
+++ b/src/main/resources/templates/manager/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="welcome-block">
-    <h1><span th:text="${EP.getName()}"/></h1>
+    <h1><span th:text="${ep.getName()}"/></h1>
 
     <button onclick="goTo('manager/orderList')">Список активных заказов</button>
     <button onclick="goTo('manager/historyOrder')">История заказов</button>
