--- a/src/main/resources/templates/user/orderCreateComplete.html
+++ b/src/main/resources/templates/user/orderCreateComplete.html
@@ -11,7 +11,7 @@
 <div class="text-block">
     <h1>Заказ создан!</h1>
     <h1 th:text="${orderId}"></h1>
-    <p>По этому номеру вы можете проверять свой заказ:...</p>
+    <p>По этому номеру вы можете проверять свой заказ:<span th:text="${orderId}"></span></p>
 </div>
 
 <button type="button" class="buttons" onclick="goTo('user/start')" id="toStartPage">На главную страницу</button>
